@@ -109,6 +109,7 @@
 	* Added a class in the relevance bar amrkup to use the theme background color when used in the introduction package
 	* Added styling for the result list to match the introduction package
 	* Added styling for sorting and frequent searches to match the introducion package
+	* Added styling for the search form to match the introducion package
 
 2012-02-13  Ingo Renner  <ingo.renner@dkd.de>
 
